save change to rewrite

--- a/tests/test-client/index.html
+++ b/tests/test-client/index.html
@@ -47,6 +47,19 @@
   </style>
 </head>
 <body>
+  <select name="group-selector" id="group-selector">
+    <option hidden disabled selected value> -- select an option -- </option>
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="opel">Opel</option>
+    <option value="audi">Audi</option>
+</select>
+<select name="channel-selector" id="channel-selector">
+    <option hidden disabled selected value> -- select an option -- </option>
+    <option value="LM">Lockheed-Martin</option>
+    <option value="BO">Boeing</option>
+    <option value="AB">AirBus</option>
+</select>
   <div id="message-container"></div>
   <form id="send-container">
     <input type="text" id="message-input">
